# graphics-programming-2021

assignments/voronoi/: main.cpp
assignments/voronoi/shaders/: color.frag  distance.frag  distance_color.frag  shader.vert
exercises/exercise_1/exercise_1_1_and_1_2/: main.cpp
exercises/exercise_1/exercise_1_3/: main.cpp
exercises/exercise_11_solutions/exercise_11_1_and_11_3_sol/shaders/: water.frag
exercises/exercise_12/exercise_12_1_to_12_3/: CMakeLists.txt  camera.h  firstpersoncamera.h  main.cpp
exercises/exercise_12/exercise_12_1_to_12_3/shaders/: bloom_final.frag  crystal_shader.frag  rain.frag  rain.vert  water.frag
exercises/exercise_2/exercise_2_2_to_2_7/: main.cpp
exercises/exercise_3/exercise_3/: main.cpp
exercises/exercise_4/exercise_4_1_and_4_2/: main.cpp
exercises/exercise_5/exercise_5_1/: main.cpp
exercises/exercise_5/exercise_5_2/: CMakeLists.txt  camera.h  firstpersoncamera.h  glmutils.h  main.cpp  primitives.h  rain.frag
exercises/exercise_5/exercise_5_2/shaders/: floor_shader.frag  rain.frag  rain.vert
exercises/exercise_8/exercise_8_1_to_8_6/: CMakeLists.txt
exercises/exercise_8_solutions/exercise_8_1_to_8_6_sol/: CMakeLists.txt
exercises/exercise_9/exercise_9/: main.cpp
exercises/exercise_9_solutions/exercise_9_sol/: main.cpp
